修改bug